templates/deployment.yaml

# Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: production
  labels:
    app: production
spec:
  replicas: 3
  selector:
    matchLabels:
      app: production
  template:
    metadata:
      labels:
        app: production
    spec:
      containers:
      - name: production
        image: registry.k8s.io/ingress-nginx/e2e-test-echo:v1.1.2@sha256:b43ed89fb7ae67c430470d4eb9ea4058c1c74c42b10aa064244eb971b9a370d8
        ports:
        - containerPort: 80
